--- a/Wildfire/Views/SignUpPageView.xaml
+++ b/Wildfire/Views/SignUpPageView.xaml
@@ -4,7 +4,7 @@
              x:Class="Wildfire.Views.SignUpPageView"
              BackgroundColor="White">
     <ContentPage.Content>
-
+        <ScrollView>
         <Grid>
 
             <Grid.RowDefinitions>
@@ -108,6 +108,6 @@
                 Grid.Column="1"/>
 
         </Grid>
-
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
