--- a/Wildfire/Views/LocalInfoView.xaml
+++ b/Wildfire/Views/LocalInfoView.xaml
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.InfoView"
-             Title="Info Centre"
+             x:Class="Wildfire.Views.LocalInfoView"
              BackgroundColor="White">
-    
     <ContentPage.Content>
-        <ScrollView>
+
+        <RefreshView
+                     >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10"></RowDefinition>
                     <RowDefinition Height="115"></RowDefinition>
                     <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="115"></RowDefinition>
+                    <RowDefinition Height="215"></RowDefinition>
                     <RowDefinition Height="10"></RowDefinition>
                     <RowDefinition Height="115"></RowDefinition>
                     <RowDefinition Height="10"></RowDefinition>
@@ -27,16 +27,18 @@
 
                 <Button x:Name="HomeInfo" Grid.Row="1" Grid.Column="1"  CornerRadius="25" FontSize="25" FontAttributes="Bold" BorderWidth="3" BorderColor="Black" 
                         TextColor="Black" BackgroundColor="LightBlue" Text="Home">
-                    
+
                 </Button>
 
-                <Button x:Name="WildlandInfo" Grid.Row="3" Grid.Column="1" BackgroundColor="LightBlue" CornerRadius="25" FontSize="25" FontAttributes="Bold" BorderWidth="3" BorderColor="Black" Text="Wildland" TextColor="Black"></Button>
-
-                <Button x:Name="LocalInfo" Grid.Row="5" Grid.Column="1" BackgroundColor="LightBlue" CornerRadius="25" FontSize="25" FontAttributes="Bold" BorderWidth="3" BorderColor="Black" Text="Local Information" TextColor="Black" Clicked="LocalInfo_Clicked"></Button>
-
-                <Button x:Name="ProfessionalInfo" Grid.Row="7" Grid.Column="1" BackgroundColor="LightYellow" CornerRadius="25" FontSize="25" FontAttributes="Bold" BorderWidth="3" BorderColor="Black" Text="Firefighters" TextColor="Black"></Button>
-
+                <Frame Grid.Row="3" Grid.Column="1" HasShadow="False"  BorderColor="black" CornerRadius="25">
+                    <StackLayout>
+                        <ContentView>
+                            <Label x:Name="InfoLocation" TextColor="Black"></Label>
+                            
+                        </ContentView>
+                    </StackLayout>
+                </Frame>
             </Grid>
-        </ScrollView>
+        </RefreshView> 
     </ContentPage.Content>
 </ContentPage>
