--- a/Wildfire/Views/LocalInfoView.xaml
+++ b/Wildfire/Views/LocalInfoView.xaml
@@ -38,6 +38,8 @@
                         </ContentView>
                     </StackLayout>
                 </Frame>
+
+                <Label Grid.Row="5" Grid.Column="1" x:Name="EmerNum" TextColor="Black"> </Label>
             </Grid>
         </RefreshView> 
     </ContentPage.Content>
