Many UI fixes from feedback, screen changes

--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -5,6 +5,7 @@
              xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              Title="Map"
              xmlns:vm="clr-namespace:Wildfire.ViewModels"
+             BackgroundColor="White"
              FocusOriginCommand="{Binding FocusOriginCommand}"
              >
     <ContentPage.BindingContext>
@@ -19,8 +20,18 @@
                VerticalOptions="FillAndExpand"
                maps:MapLongClicked="map_MapClicked"
                PinClicked="map_PinClicked"
+               IsVisible="true"
                ></maps:Map>
 
+
+        <ActivityIndicator x:Name="overlay"  IsRunning="True" IsVisible="True" Color="Black" BackgroundColor="White" AbsoluteLayout.LayoutFlags="PositionProportional" 
+                 AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+           
+        </ActivityIndicator>
+
+        <Label x:Name="loading" Text="Loading Fires and Location..." TextColor="Black" FontSize="20" IsVisible="false" AbsoluteLayout.LayoutFlags="PositionProportional" 
+                 AbsoluteLayout.LayoutBounds="0.5,0.6,-1,-1"></Label>
+        
         <Button AbsoluteLayout.LayoutBounds="0.98,0.73,AutoSize,AutoSize"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
                 HeightRequest="52"
@@ -30,7 +41,9 @@
                 BorderColor="Black"
                 BorderWidth="3"
                 ImageSource="flame.png"
-                Clicked="ReportFire_Clicked"/>
+                Clicked="ReportFire_Clicked"
+                IsVisible="true"
+                x:Name="Report_Clicked"/>
         
         
         <Button AbsoluteLayout.LayoutBounds="0.98, 0.84, AutoSize, AutoSize"
@@ -43,7 +56,8 @@
                 BorderWidth="3"
                 ImageSource="search.png"
                 x:Name="searchPopup"
-                Clicked="Search_Clicked"/>
+                Clicked="Search_Clicked"
+                IsVisible="true"/>
 
         
         
@@ -205,6 +219,11 @@
                 BorderWidth="3"
                 ImageSource="pin.png"
                 Clicked="Location_Button_Clicked"
-               />
+               IsVisible="true"
+                x:Name="Location_Clicked"/>
     </AbsoluteLayout>
+
+  
+    
+    
 </ContentPage>
