--- a/Wildfire/Views/LoginPageView.xaml
+++ b/Wildfire/Views/LoginPageView.xaml
@@ -8,9 +8,9 @@
         <ScrollView>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="150"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="90"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="2"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="140"></RowDefinition>
@@ -22,13 +22,20 @@
                 </Grid.RowDefinitions>
                 <Label 
                Text="Login"
-                   Grid.Row="1"
+                   Grid.Row="0"
                    FontSize="50"
                    HorizontalOptions="Center"
                    TextColor="Black"
-                   Margin="0,30"
-                   FontAttributes="Bold"></Label>
+                   Margin="0,10"
+                   FontAttributes="Bold"
+                   ></Label>
 
+                <Image Source="xhdpi.png"
+                       Grid.Row="1"
+                       HeightRequest="150"
+                       WidthRequest="150">
+                </Image>
+                
                 <Entry 
                 Grid.Row="3"
                 Placeholder="E-mail"
