--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -9,13 +9,13 @@
         <ScrollView>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="35" />
+                <RowDefinition Height="100"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="45"/>
-                <RowDefinition Height="15"/>
-                <RowDefinition Height="45" />
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="55"/>
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
@@ -41,16 +41,21 @@
 
             <!--<Label Text="Welcome" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>-->
             
-                <Label  Grid.Row="2" Grid.Column="1" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+                <Label  Grid.Row="2" Grid.Column="1" Text="hello" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
 
             
             
-                <Label Grid.Row="4" Grid.Column="1" x:Name="settingsDate" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+                <Label Grid.Row="4" Grid.Column="1" Text=" hello" x:Name="settingsDate" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
 
-            
+                <Image Source="xhdpi.png"
+                       Grid.Row="5"
+                       Grid.Column="1"
+                       HeightRequest="150"
+                       WidthRequest="150">
+                </Image>
 
-           
-            <Entry x:Name="nameSettings" Grid.Row="20" Grid.Column="1" Text="{Binding Nickname}" Placeholder="Insert Nickname" Completed="OnChange"></Entry>
+
+                <Entry x:Name="nameSettings" Grid.Row="20" Grid.Column="1" Text="{Binding Nickname}" Placeholder="Insert Nickname" Completed="OnChange"></Entry>
 
             <Label Grid.Row="8" Grid.Column="1" FontSize="18"  TextColor="black" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
             <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
@@ -58,21 +63,40 @@
             
 
                 <Label Grid.Row="7" Grid.Column="1" FontSize="18" TextColor="Black" HorizontalOptions="Start"  VerticalOptions="Center" Text="Notification Radius"></Label>
+            
             <Entry x:Name="radiusSettings" HorizontalTextAlignment="End" Grid.Row="7" Grid.Column="1" BackgroundColor="LightGray" HorizontalOptions="End" Text="{Binding Radius}" Placeholder="Set Radius(Km)" Keyboard="Numeric" Completed="OnChange"></Entry>
 
-            <Button Text="Login"  Grid.Row="10" Grid.Column="1" Clicked="Login_Button_Clicked" FontSize="20"
+            <Button
+                Text="Change Password"
+                Grid.Row="10"
+                Grid.Column="1"
+                FontSize="20"
+                CornerRadius="10"
+                BorderColor="Black"
+                BorderWidth="3"
+                HorizontalOptions="StartAndExpand"
+                WidthRequest="300"
+                BackgroundColor="LightCyan"
+                TextColor="Black"
+                FontAttributes="bold"
+                x:Name="ChangePass"
+                Clicked="ChangePass_Clicked">
+                    
+            </Button>
+            
+            <Button Text="Login"  Grid.Row="12" Grid.Column="1" Clicked="Login_Button_Clicked" FontSize="20"
                      FontAttributes="Bold"
                      CornerRadius="10"
                      BorderWidth="3"
                      BorderColor="Black"
-                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300"  VerticalOptions="End" BackgroundColor="#ff8c19"></Button>
+                     TextColor="Black" HorizontalOptions="Start" WidthRequest="145"  VerticalOptions="End" BackgroundColor="#ff8c19"></Button>
 
             <Button Text="Signup"  Grid.Row="12" Grid.Column="1" Clicked="Signup_Button_Clicked" FontSize="20"
                      FontAttributes="Bold"
                      CornerRadius="10"
                      BorderWidth="3"
                      BorderColor="Black"
-                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300" VerticalOptions="End" BackgroundColor="LightGray"></Button>
+                     TextColor="Black" HorizontalOptions="End" WidthRequest="145" VerticalOptions="End" BackgroundColor="LightGray"></Button>
 
             <Button Text="Logout"  Grid.Row="14" Grid.Column="1" Clicked="Logout_Button_Clicked" FontSize="20"
                      FontAttributes="Bold"
