--- a/Wildfire/Views/SignUpPageView.xaml
+++ b/Wildfire/Views/SignUpPageView.xaml
@@ -8,11 +8,11 @@
         <Grid>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="175"></RowDefinition>
+                <RowDefinition Height="135"></RowDefinition>
+                <RowDefinition Height="100"></RowDefinition>
                 <RowDefinition Height="20"></RowDefinition>
                 <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="15"></RowDefinition>
+                <RowDefinition Height="5"></RowDefinition>
                 <RowDefinition Height="55"></RowDefinition>
                 <RowDefinition Height="15"></RowDefinition>
                 <RowDefinition Height="45"></RowDefinition>
@@ -34,14 +34,21 @@
                 HorizontalTextAlignment="Center"
                 TextColor="Black"
                 FontSize="50"
-                Margin="0, 30"
+                Margin="0, 10"
                 FontAttributes="Bold"
-                Grid.Row="1"
+                Grid.Row="0"
                 Grid.Column="1">
 
             </Label>
+                <Image Source="xhdpi.png"
+                       Grid.Row="1"
+                       HeightRequest="150"
+                       WidthRequest="150"
+                       Grid.Column="1">
+                </Image>
 
-            <Entry 
+
+                <Entry 
                 Placeholder="E-mail"
                 Keyboard="Email"
                 x:Name="EmailInput"
