--- a/Wildfire/Views/ChangePass.xaml
+++ b/Wildfire/Views/ChangePass.xaml
@@ -7,6 +7,8 @@
         <ScrollView>
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="135"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
@@ -20,17 +22,40 @@
                 </Grid.ColumnDefinitions>
 
 
+                <Label
+                Text="Change Password"
+                HorizontalTextAlignment="Center"
+                TextColor="Black"
+                FontSize="50"
+                Margin="0, 10"
+                FontAttributes="Bold"
+                Grid.Row="0"
+                Grid.Column="1">
+
+                </Label>
+
+
+                <Image Source="xhdpi.png"
+                       Grid.Row="1"
+                       HeightRequest="150"
+                       WidthRequest="150"
+                       Grid.Column="1">
+                </Image>
+
+
                 <Label Text="Please enter New password"
-                       Grid.Row="0"
+                       Grid.Row="2"
                        Grid.Column="1"
                        FontSize="20"
-                       TextColor="Black"></Label>
+                       TextColor="Black"
+                       HorizontalTextAlignment="Center"
+                       ></Label>
 
                 <Entry Placeholder="Password"
                        PlaceholderColor="White"
                        BackgroundColor="LightGray"
                        TextColor="Black"
-                       Grid.Row="1"
+                       Grid.Row="3"
                        Grid.Column="1"
                        x:Name="oldPass"
                        IsPassword="True"
@@ -39,7 +64,7 @@
                 
 
                 <Button Text="Change Password"
-                        Grid.Row="2"
+                        Grid.Row="4"
                         Grid.Column="1"
                         BackgroundColor="#ff8c19"
                         TextColor="Black"
@@ -47,8 +72,28 @@
                         BorderWidth="3"
                         CornerRadius="10"
                         x:Name="ChangePassword"
-                        Clicked="ChangePassword_Clicked">
+                        Clicked="ChangePassword_Clicked"
+                        FontAttributes="Bold"
+                        FontSize="20"
+                        >
 
+                </Button>
+
+                <Button
+                    Text="Back"
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    BackgroundColor="LightGray"
+                    TextColor="Black"
+                    BorderColor="Black"
+                    BorderWidth="3"
+                    CornerRadius="10"
+                    x:Name="BackButton"
+                    FontAttributes="Bold"
+                    FontSize="20"
+                    Clicked="BackButton_Clicked"
+                    >
+                    
                 </Button>
 
             </Grid>
