--- a/Wildfire/Views/ForgotPassword.xaml
+++ b/Wildfire/Views/ForgotPassword.xaml
@@ -7,6 +7,9 @@
         <ScrollView>
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="135"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
@@ -18,22 +21,45 @@
                 </Grid.ColumnDefinitions>
 
 
+                <Label
+                Text="Forgot Password"
+                HorizontalTextAlignment="Center"
+                TextColor="Black"
+                FontSize="50"
+                Margin="0, 10"
+                FontAttributes="Bold"
+                Grid.Row="0"
+                Grid.Column="1">
+
+                </Label>
+
+
+                <Image Source="xhdpi.png"
+                       Grid.Row="1"
+                       HeightRequest="150"
+                       WidthRequest="150"
+                       Grid.Column="1">
+                </Image>
+
+
                 <Label Text="Please Enter Recovery Email"
-                       Grid.Row="0"
+                       Grid.Row="2"
                        Grid.Column="1"
                        FontSize="20"
-                       TextColor="Black"></Label>
+                       TextColor="Black"
+                       HorizontalTextAlignment="Center"
+                       ></Label>
 
                 <Entry Placeholder="email"
                        PlaceholderColor="White"
                        BackgroundColor="LightGray"
                        TextColor="Black"
-                       Grid.Row="1"
+                       Grid.Row="3"
                        Grid.Column="1"
                        x:Name="emailPass"></Entry>
 
                 <Button Text="Send Email"
-                        Grid.Row="2"
+                        Grid.Row="4"
                         Grid.Column="1"
                         BackgroundColor="#ff8c19"
                         TextColor="Black"
@@ -41,7 +67,28 @@
                         BorderWidth="3"
                         CornerRadius="10"
                         x:Name="ForgotPass"
-                        Clicked="ForgotPass_Clicked">
+                        Clicked="ForgotPass_Clicked"
+                        FontAttributes="Bold"
+                        FontSize="20"
+                        >
+                    
+                </Button>
+
+                <Button
+                    Text="Back"
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    BackgroundColor="LightGray"
+                    TextColor="Black"
+                    BorderColor="Black"
+                    BorderWidth="3"
+                    CornerRadius="10"
+                    x:Name="BackButton"
+                    FontAttributes="Bold"
+                    FontSize="20"
+                    Clicked="BackButton_Clicked"
+                    >
+                    
                     
                 </Button>
                
