--- a/Wildfire/Views/LoginPageView.xaml
+++ b/Wildfire/Views/LoginPageView.xaml
@@ -17,9 +17,14 @@
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
                     <RowDefinition Height="40"></RowDefinition>
-
-
                 </Grid.RowDefinitions>
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
                 <Label 
                Text="Login"
                    Grid.Row="0"
@@ -28,14 +33,16 @@
                    TextColor="Black"
                    Margin="0,10"
                    FontAttributes="Bold"
+                   Grid.Column="1"
                    ></Label>
 
                 <Image Source="xhdpi.png"
                        Grid.Row="1"
                        HeightRequest="150"
-                       WidthRequest="150">
+                       WidthRequest="150"
+                       Grid.Column="1">
                 </Image>
-                
+
                 <Entry 
                 Grid.Row="3"
                 Placeholder="E-mail"
@@ -45,7 +52,8 @@
                 WidthRequest="200"
                 Margin="50,5"
                 PlaceholderColor="DarkGray"
-                TextColor="black"/>
+                TextColor="black"
+                Grid.Column="1"/>
 
                 <Entry 
                 Grid.Row="4"
@@ -55,14 +63,18 @@
                 BackgroundColor="LightGray"
                 Margin="50,5"
                 PlaceholderColor="DarkGray"
-                TextColor="black"/>
+                TextColor="black"
+                     Grid.Column="1"
+                    />
 
                 <Button 
                 Grid.Row="5"
+                     Grid.Column="1"
+                    
                 Text="Login"
                 Clicked="Login_Clicked"
                 Margin="60,20"
-                WidthRequest="200"
+              WidthRequest="300"
                 BorderColor="Black"
                 TextColor="Black"
                 HorizontalOptions="Center"
@@ -70,7 +82,11 @@
                 CornerRadius="10"
                 BorderWidth="3"
                 FontSize="16"
-                FontAttributes="Bold"/>
+                FontAttributes="Bold"
+                     
+                    
+                  
+                    />
 
                 <Button 
                 Grid.Row="6"
@@ -85,6 +101,7 @@
                 FontAttributes="Bold"
                 WidthRequest="170"
                 FontSize="16"
+                     Grid.Column="1"
                 />
 
                 <Button
@@ -98,7 +115,9 @@
                 CornerRadius="10"
                 BorderWidth="3"
                 FontSize="16"
-                FontAttributes="Bold"/>
+                FontAttributes="Bold"
+                     Grid.Column="1"
+                    />
 
                 <Button Grid.Row="8"
                         Text="Forgot Password?"
@@ -112,7 +131,9 @@
                         FontAttributes="Bold"
                         Margin="10,0"
                         x:Name="Forgot_Button"
-                        Clicked="Forgot_Button_Clicked">
+                        Clicked="Forgot_Button_Clicked"
+                         Grid.Column="1"
+                        >
                     
                 </Button>
 
