--- a/Wildfire/Views/ResolveFireInfoView.xaml
+++ b/Wildfire/Views/ResolveFireInfoView.xaml
@@ -4,25 +4,34 @@
              x:Class="Wildfire.Views.ResolveFireInfoView"
              BackgroundColor="White">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition Height="70"></RowDefinition>
-                <RowDefinition Height="25"></RowDefinition>
-                <RowDefinition Height="25"></RowDefinition>
-                <RowDefinition Height="150"></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition Height="90"></RowDefinition>
-                <RowDefinition Height="70"></RowDefinition>
-                <RowDefinition Height="70"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="300"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <ScrollView>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="70"></RowDefinition>
+                    <RowDefinition Height="25"></RowDefinition>
+                    <RowDefinition Height="25"></RowDefinition>
+                    <RowDefinition Height="120"></RowDefinition>
+                    <RowDefinition Height="25"></RowDefinition>
+                    <RowDefinition Height="80"></RowDefinition>
+                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="120"></RowDefinition>
+                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="5"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="5"></RowDefinition>
+                    
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <Frame
+                <Frame
                 
                 BorderColor="Black"
                 HeightRequest="150"
@@ -33,56 +42,102 @@
                 HasShadow="True"
                 
                 >
-                <Label Text="Resolve Fire" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
-            </Frame>
-            
-            <Label x:Name="fireTag" Grid.Row="22" Grid.Column="1" FontSize="20"></Label>
-            <Label x:Name="firePlaceName" Grid.Row="2" TextColor="Black" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Grid.Column="1" FontSize="20"></Label>
-            <Label x:Name="fireID" Grid.Row="3" Grid.Column="1" FontSize="20" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" TextColor="Black"></Label>
+                    <Label Text="Resolve Fire" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+                </Frame>
 
-            <Image 
+                <Label x:Name="fireTag" Grid.Row="0" Grid.Column="0" FontSize="0"></Label>
+                <Label x:Name="firePlaceName" Grid.Row="2" TextColor="Black" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Grid.Column="1" FontSize="20"></Label>
+                <Label x:Name="fireID" Grid.Row="3" Grid.Column="1" FontSize="20" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" TextColor="Black"></Label>
+
+                <Image 
                 x:Name="imgChoose" 
                 HeightRequest="150" 
                 Grid.Row="4" 
                 Grid.Column="1" 
                 Source="photo.png"></Image>
 
-            <Label x:Name="FireDescription" Text="Fire Description" Grid.Row="5" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
+                <Label x:Name="time" Grid.Row="0" Grid.Column="0" TextColor="white" FontSize="0"></Label>
 
-            <Editor x:Name="newDesc" Placeholder=" Information about Resolved Fire" MaxLength="100" HeightRequest="100" BackgroundColor="LightGray" Grid.Row="6" Grid.Column="1" TextColor="Black" Keyboard="Text"></Editor>
+                <Label x:Name="FireDescription" Text="Fire Description" Grid.Row="5" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
 
-            <Button  Text="Resolve"
+                <Editor x:Name="newDesc" Placeholder=" Information about Resolved Fire" MaxLength="100" HeightRequest="100" BackgroundColor="LightGray" Grid.Row="6" Grid.Column="1" TextColor="Black" Keyboard="Text"></Editor>
+
+                <Button 
+                x:Name="photo_Add"
+                Grid.Row="8" 
+                Grid.Column="1" 
+                FontSize="20" 
+                Text="Add Photo +" 
+                BackgroundColor="LightGray" 
+                WidthRequest="300"
+                BorderColor="Black"
+                TextColor="Black"
+                HorizontalOptions="Center"
+                CornerRadius="10"
+                BorderWidth="3"
+                FontAttributes="Bold"
+                Clicked="photo_Add_Clicked"
+               ></Button>
+
+                <Button 
+                x:Name="photo_Take"
+                Grid.Row="9" 
+                Grid.Column="1" 
+                FontSize="20" 
+                Text="Take Photo +" 
+                BackgroundColor="LightGray" 
+                WidthRequest="300"
+                BorderColor="Black"
+                TextColor="Black"
+                HorizontalOptions="Center"
+                CornerRadius="10"
+                BorderWidth="3"
+                FontAttributes="Bold"
+                    Clicked="photo_Take_Clicked"
+               ></Button>
+
+                <Image 
+                x:Name="imgNewChoose" 
+                HeightRequest="150" 
+                Grid.Row="10" 
+                Grid.Column="1" 
+                Source="photo.png"
+               ></Image>
+
+                <ActivityIndicator Grid.Row="14" Grid.Column="1" BindingContext="{x:Reference imgChoose}" IsRunning="{Binding IsLoading}"></ActivityIndicator>
+
+
+                <Button  Text="Resolve"
                      x:Name="btn_Res" 
-                     WidthRequest="100" 
-                     HeightRequest=" 50" 
-                     Grid.Row="7" 
+                     Grid.Row="12" 
                      Grid.Column="1" 
-                     Clicked="btn_Res_Clicked" 
+                    
                      BackgroundColor="#ff8c19"
                      FontSize="20"
                      FontAttributes="Bold"
                      CornerRadius="10"
                      BorderWidth="3"
                      BorderColor="Black"
-                     TextColor="Black"></Button>
-            
-            <Button  Text="Cancel" 
+                     TextColor="Black"
+                     Clicked="btn_Res_Clicked"></Button>
+
+                <Button  Text="Cancel" 
                      x:Name="btn_Cancel" 
-                     WidthRequest="100" 
-                     HeightRequest=" 50" 
-                     Grid.Row="8" 
+                     Grid.Row="14" 
                      Grid.Column="1" 
-                     Clicked="btn_Cancel_Clicked" 
+                    
                      BackgroundColor="LightGray"
                      FontSize="20"
                      FontAttributes="Bold"
                      CornerRadius="10"
                      BorderWidth="3"
                      BorderColor="Black"
-                     TextColor="Black"></Button>
+                     TextColor="Black"
+                         Clicked="btn_Cancel_Clicked"></Button>
 
 
 
-        </Grid>
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
