--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -55,11 +55,11 @@
             <Label Grid.Row="8" Grid.Column="1" FontSize="18"  TextColor="black" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
             <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
 
-            
+                
 
                 <Label Grid.Row="7" Grid.Column="1" FontSize="18" TextColor="Black" HorizontalOptions="Start"  VerticalOptions="Center" Text="Notification Radius"></Label>
 
-                <Entry x:Name="radiusSettings" HorizontalTextAlignment="End" Grid.Row="7" Grid.Column="1" BackgroundColor="LightGray" HorizontalOptions="End" Text="{Binding Radius}" Placeholder="Set Radius(Km)" Keyboard="Numeric" Completed="OnChange" ClearButtonVisibility="WhileEditing" ReturnType="Done"></Entry> 
+                <Entry x:Name="radiusSettings" HorizontalTextAlignment="End" Grid.Row="7" WidthRequest="132" Grid.Column="1" BackgroundColor="LightGray" HorizontalOptions="End" Text="{Binding Radius}" Placeholder="Set Radius(Km)" Keyboard="Numeric" Completed="OnChange" ClearButtonVisibility="WhileEditing" ReturnType="Done"></Entry> 
 
             <Button
                 Text="Change Password"
